--- a/src/app/projects/project-table/project-table.component.html
+++ b/src/app/projects/project-table/project-table.component.html
@@ -55,12 +55,12 @@
       <mat-cell *matCellDef="let element">{{element.client[0]['email']}}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef></mat-header-cell>
+      <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
       <mat-cell *matCellDef="let row;let i = index;let element">
-        <button mat-icon-button (click)="updateProject(row)">
+        <button mat-icon-button (click)="updateProject(row)" *ngIf="element.projectManager[0].email === activeUser || activeUser === 'admin@saar2020.com'">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn" (click)="deleteProject(element.id)">
+        <button mat-icon-button color="warn" (click)="deleteProject(element.id)" *ngIf="element.projectManager[0].email === activeUser || activeUser === 'admin@saar2020.com'">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </mat-cell>
