--- a/src/app/repository/relatorios-table/relatorios-table.component.html
+++ b/src/app/repository/relatorios-table/relatorios-table.component.html
@@ -36,7 +36,7 @@
       <mat-cell *matCellDef="let element">{{element.delDeadline}}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef></mat-header-cell>
+      <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
       <mat-cell *matCellDef="let row;let i = index;let element">
         <button mat-icon-button (click)="updateRelatorio(row)">
           <mat-icon>edit</mat-icon>
