--- a/src/app/repository/users-table/users-table.component.html
+++ b/src/app/repository/users-table/users-table.component.html
@@ -1,5 +1,5 @@
 <div class="search-div">
-  <button mat-raised-button (click)="createUser()">
+  <button mat-raised-button (click)="createUser()" *ngIf="activeUser === 'admin@saar2020.com'">
     <mat-icon>add</mat-icon>
     Create
   </button>
@@ -21,12 +21,12 @@
       <mat-cell *matCellDef="let element">{{element.email}}</mat-cell>
     </ng-container>
     <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef></mat-header-cell>
+      <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
       <mat-cell *matCellDef="let row;let i = index;let element">
-        <button mat-icon-button (click)="updateUser(row)">
+        <button mat-icon-button (click)="updateUser(row)" *ngIf="activeUser === 'admin@saar2020.com'">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn" (click)="deleteUser(element.id)">
+        <button mat-icon-button color="warn" (click)="deleteUser(element.id)" *ngIf="activeUser === 'admin@saar2020.com'">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </mat-cell>
